feat: Add SCSS structure and PagesController
- Updated Gemfile and Gemfile.lock to include necessary dependencies.
- Removed  and replaced it with  for SCSS support.
- Added SCSS folder structure:  and .
- Added images to  for use in the application.
- Created  for handling static pages.
- Updated  and  to reflect changes.
- Added initial views for components and pages.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+@import "components/footer";
+@import "components/navbar";
+@import "pages/home";
+@import "pages/contact";
+@import "pages/welcome";
+
+body {
+  margin: 0;
+}
