feat: Update styles and views across the application
- Updated styles:
  - Modified `components/navbar.scss` for improved navbar styling.
  - Adjusted `pages/welcome.scss` for better layout and visuals on the welcome page.

- Updated views:
  - Enhanced `_footer.html.erb` and `_navbar.html.erb` components for consistency.
  - Updated layout in `application.html.erb`.
  - Refined content and structure in pages:
    - `contact.html.erb`
    - `home.html.erb`
    - `welcome.html.erb`
  - Improved room views:
    - `rooms/index.html.erb`
    - `rooms/show.html.erb`.

- Updated `config/routes.rb` to align with changes in the pages and components.

These changes enhance the overall UI/UX and maintain consistency across the application.

--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -1,10 +1,14 @@
 .navbarbox{
-  
+  width: 100vw;
+  height: auto;
   .navbar{
-
     .navbarul{
-
+      display: flex;
+      flex-direction: row;
+      list-style: none;
       .navbarli{
+        width: 20vw;
+        margin: auto;
 
       }
     }
