Refonte UI et ajout de composants : images, styles, vues et contrôleur
- Suppression d'anciennes images inutilisées
- Ajout de nouvelles images pour les pages (bath, bed, city, etc.)
- Mise à jour des styles SCSS pour le footer, navbar, home, welcome, etc.
- Ajout de nouveaux composants : background header, legal notices, privacy policy
- Création du ComponentsController
- Mise à jour des vues : footer, pages (contact, home, welcome), layout, rooms
- Ajout de contrôleurs JS (background_zoom)
- Mise à jour des routes et seeds

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,10 +16,18 @@
 
 @import "components/footer";
 @import "components/navbar";
+@import "components/backgroundheader.scss";
+@import "components/privacypolicy.scss";
+@import "components/legalnotices.scss";
 @import "pages/home";
 @import "pages/contact";
 @import "pages/welcome";
+@import "pages/show.scss";
 
 body {
   margin: 0;
+}
+
+:root {
+  --color_txt: 74, 74, 74;
 }
