--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -1,21 +1,29 @@
-<span>
+<div class="container-footer">
   <span>
-    <a href="mailto:chambre.hote@gmail.com" target="_self">chambres.hote@gmail.com</a>
+    <span>
+      <a href="mailto:chambre.hote@gmail.com" target="_self">chambres.hote@gmail.com</a>
+    </span>
+    <span>
+      /
+    </span>
+    <span>
+      <a href="tel:06" >+33 (0)678939873</a>
+    </span>
   </span>
+  <p>
+    <span>
+      177 boulevard Camille flammarion 13004 Marseille
+    </span>
+  </p>
   <span>
-    <a href="tel:06" >+33 (0)6</a>
+    <span>
+      <%= link_to 'Mentions légales', legal_path, class: 'footerli' %>
+    </span>
+    <span>
+      /
+    </span>
+    <span>
+      <%= link_to 'Politique de confientialité', policy_path, class: 'footerli' %>
+    </span>
   </span>
-</span>
-<p>
-  <span>
-    adresse
-  </span>
-</p>
-<span>
-  <span>
-    <a href="">Mentions légales</a>
-  </span>
-  <span>
-    <a href="">Politique de confientialité</a>
-  </span>
-</span>
+</div>
