--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <!-- favicon of massalia  -->
-    <%= favicon_link_tag "FB_IMG_1735151995643.jpg", rel: "icon", type: "jpg" %>
+    <%= favicon_link_tag "flowers.jpeg", rel: "icon", type: "jpeg" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
@@ -15,5 +15,4 @@
   <body>
     <%= yield %>
   </body>
-  <%= render "components/footer" %>
 </html>
