--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,10 +1,2 @@
-<div class="background-welcome">
-  <%= image_tag "FB_IMG_1735151995643.jpg", class:"background"%>
-</div>
-<div class="container-welcome">
-  <div class="block-welcome">
-    <h1>Le manoir HUART</h1>
-    <h2>Chambre d'hôte</h2>
-    <%= link_to 'Découvrir le site', home_path, class: '' %>
-  </div>
-</div>
+<%= render "components/welcomecontainer" %>
+<%= render "components/footer" %>
