--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -1,15 +1,29 @@
 .navbarbox{
   width: 100vw;
-  height: auto;
+  height: 50px;
+  position: absolute;
+  z-index: 200;
+  background-color: rgba(94, 94, 95, 0.6);
+
   .navbar{
+    display: flex;
+    width: 80%;
+    height: 100%;
+    flex-direction: column;
+    margin: auto;
+    justify-content: center;
+    text-align: center;
+
     .navbarul{
+      margin: 0;
       display: flex;
       flex-direction: row;
+      justify-content: space-between;
       list-style: none;
       .navbarli{
-        width: 20vw;
+        color: aliceblue;
         margin: auto;
-
+        text-decoration: none;
       }
     }
   }
