--- a/app/assets/stylesheets/pages/welcome.scss
+++ b/app/assets/stylesheets/pages/welcome.scss
@@ -1,24 +1,57 @@
 .background-welcome {
-  position: absolute;
-  top: 0;
+  height: 100vh;
   width: 100vw;
-  height: 100vh;
-  .background {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    object-fit: cover;
+  .background-welcome-img {
+    position: relative;
+    .zoom-background{
+      position: absolute;
+      background-size: cover;
+      overflow: hidden;
+      object-fit: cover;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      opacity: 0.8;
+      transition: background-size 0.2s ease-out;
+    }
   }
-}
+  .container-welcome {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    font-family: poppins-extralight, poppins, sans-serif;
+    .block-welcome {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      justify-content: center;
+      h1 {
+        margin-top: 0;
+        color: #FFFF;
+        font-weight: lighter;
+        font-size: 4em;
+      }
 
-.container-welcome {
-  position: relative;
-  width: 50%;
-  height: 100vh;
-  margin: auto;
-  .block-welcome {
-    width: 100%;
-    margin: auto;
+      h2 {
+        color: #FFFF;
+        font-weight: lighter;
+        font-size: 2.4em;
+      }
 
+      .btn-home {
+        padding: 15px;
+        border-radius: 15px;
+        color: aliceblue;
+        text-decoration: none;
+        background-color: #7d8295;
+      }
+      .btn-home:hover {
+        background-color: #494c58;
+      }
+    }
   }
 }
