--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,3 @@
 <%= render "components/navbar" %>
-<div>contact</div>
+<%= render "components/backgroundheader"%>
+<%= render "components/footer" %>
