Ajout du système de réservation et mise à jour du style et de la navigation
- Création du modèle Reservation, contrôleur associé, vues, et tests
- Ajout de fichiers de migration liés aux réservations et aux détails des chambres
- Mise à jour des fichiers SCSS pour les pages et composants (navbar, home, welcome, contact, etc.)
- Ajout d'images pour la galerie ou le contenu des pages
- Intégration de la logique de calendrier via un controller JS
- Modifications des vues et layouts pour intégrer la réservation et améliorer l’UX/UI
- Mise à jour du Gemfile et du Gemfile.lock

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,13 +16,15 @@
 
 @import "components/footer";
 @import "components/navbar";
-@import "components/backgroundheader.scss";
-@import "components/privacypolicy.scss";
-@import "components/legalnotices.scss";
+@import "components/backgroundheader";
+@import "components/privacypolicy";
+@import "components/legalnotices";
 @import "pages/home";
 @import "pages/contact";
 @import "pages/welcome";
-@import "pages/show.scss";
+@import "pages/show";
+@import "pages/indexroom";
+@import "pages/showroom";
 
 body {
   margin: 0;
