--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -5,6 +5,8 @@
   flex-direction: column;
   justify-content: center;
   margin: auto;
+  text-align: justify;
+  color: #717070;
 }
 .panel-img {
   width: 100vw;
