--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -4,6 +4,7 @@
       <%= link_to 'Bienvenue', welcome_path, class: 'navbarli' %>
       <%= link_to 'Accueil', home_path, class: 'navbarli' %>
       <%= link_to "Les chambres d'hôte", index_path, class: 'navbarli' %>
+      <%= link_to 'Activités', activity_path, class: 'navbarli' %>
       <%= link_to 'Contact', contact_path, class: 'navbarli' %>
     </ul>
   </nav>
