--- a/app/views/components/_privacy_policy.html.erb
+++ b/app/views/components/_privacy_policy.html.erb
@@ -59,8 +59,6 @@
     <h4>Combien de temps sont conservées les informations :</h4>
     <p>Veuillez noter que nous conservons les informations que nous recueillons aussi longtemps que nécessaire pour fournir les Services et pour nous conformer à nos obligations légales ou contractuelles envers vous, résoudre les litiges et faire respecter nos accords.</p>
     <p>Nous pouvons rectifier, compléter ou supprimer des informations incomplètes ou inexactes, à tout moment et à notre entière discrétion.</p>
-    <h4>Comment Wix protège les informations  :</h4>
-    <p>Le service d'hébergement de nos Propriétés numériques met à notre disposition la plateforme en ligne qui nous permet de vous fournir le Service. Vos données peuvent être stockées par l'intermédiaire des applications de stockage de données, de bases de données ou générales de notre fournisseur d'hébergement. Il stocke vos informations sur des serveurs sécurisés derrière un pare-feu et offre un accès sécurisé HTTPS à la plupart de ses services</p>
     <h4>Mineurs</h4>
     <p>Les Services ne sont pas destinés aux utilisateurs mineurs. Nous ne recueillons pas délibérément des informations auprès des enfants. Si vous n'êtes pas majeur(e), vous ne devez pas télécharger ou utiliser les Services, ni nous fournir d'informations.</p>
     <p>Nous nous réservons le droit de demander une preuve d'âge à tout moment afin de veiller à ce que les mineurs n'utilisent pas nos Services. Si nous apprenons qu'une personne n'ayant pas atteint l'âge de la majorité utilise nos Services, nous pouvons interdire et bloquer l'accès de cet utilisateur à nos Services, ainsi que supprimer toutes les informations stockées chez nous concernant cet utilisateur. Si vous avez des raisons de croire qu'un mineur a partagé des informations avec nous, veuillez nous contacter comme indiqué ci-dessous.</p>
@@ -88,7 +86,7 @@
     <h4>Nous contacter</h4>
     <p>Si vous avez des questions d'ordre général sur les Services ou les informations que nous recueillons à votre sujet, ou sur la manière dont nous les utilisons, contactez-nous :</p>
     <p>Nom :</p>
-    <p>Adresse :</p>
+    <p>Adresse : 608 route de la guiberdière, 49430 Bourgneuf, France</p>
     <p>E-mail :</p>
   </div>
 </div>
