--- a/app/views/components/_welcomecontainer.html.erb
+++ b/app/views/components/_welcomecontainer.html.erb
@@ -1,10 +1,10 @@
 <div class="background-welcome">
   <div class="background-welcome-img">
-    <%= image_tag "site.jpeg", class:"zoom-background"%>
+    <%= image_tag "home_flowers.jpeg", class:"zoom-background"%>
   </div>
   <div class="container-welcome">
     <div class="block-welcome">
-      <h1>MANOIR HUART</h1>
+      <h1>L'entre-deux-pommes</h1>
       <h2>Chambre d'hôte</h2>
       <%= link_to 'Découvrir le site', home_path, class: 'btn-home' %>
     </div>
