--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,35 @@
 <%= render "components/navbar" %>
 <%= render "components/backgroundheader"%>
+<div class="container">
+  <div class="container-contact">
+    <h1>
+      CONTACT
+    </h1>
+    <h2>L'entre-deux-pommes</h2>
+    <div>
+      <h2>
+        Adresse :
+      </h2>
+      <p>
+        608 route de la guiberdière, 49430 Bourgneuf, France
+      </p>
+    </div>
+    <div>
+      <h2>
+      Téléphone :
+      </h2>
+      <p>
+        06.70.83.45.78
+      </p>
+    </div>
+    <div>
+      <h2>
+        E-mail :
+      </h2>
+      <p>
+        lentredeuxpommes@gmail.com
+      </p>
+    </div>
+  </div>
+</div>
 <%= render "components/footer" %>
