--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,17 +6,12 @@
   </div>
   <div>
     <p>
-      Charme, élégance, douceur de vivre dans un cadre unique, à dix minutes du centre de Toulouse. Profitez de vos voyages d'affaires ou de tourisme pour vous reposer dans un authentique Manoir du 16ᵉᵐᵉ siècle.
+      Il y a 10 ans, nous avons eu un coup de coeur pour cette demeure du 16ème siècle et son histoire. Déjà, nous avions le projet de partager ce petit coin d'Anjou avec des hôtes. Nous ne sommes pas des hôteliers ou professionnels de l'hôtellerie mais nous serions ravis de vous recevoir chez nous et vous faire partager un peu de la douceur angévine de notre demeure.
     </p>
   </div>
   <div>
     <p>
-      Babeth et Claude vous proposent un hébergement en chambres d'hôtes ou en gîte dans cette propriété aux murs de briques avec son grand parc aux chênes centenaires. Vous pouvez également organiser vos séminaires ou réunions de travail dans le domaine.
-    </p>
-  </div>
-  <div>
-    <p>
-      Le Manoir Saint Clair est idéalement situé aux portes de Toulouse pour apprécier la ville et ses nombreuses activités environnantes : Cité de l'espace, Airbus, golf, musées, restaurants, etc...
+      Nous serons heureux de vous accueillir dans nos chambres d'hôtes que nous avons conçues comme nous les aimons quand nous voyageons en couple ou en famille. Nous les avons voulues spacieuses, lumineuses, propices au cocooning, pour deux personnes ou pour un couple avec deux enfants logés dans une mezzanine, leur permettant d'avoir leur propre espace pas trop loin des parents. Je vous servirai le petit déjeuner dans la salle d'accueil, où sont laissés à votre disposition une bouilloire et une machine à café, avec un petit réfrigérateur si vous souhaitez mettre des boissons fraiches. La piscine en saison estivale est ouverte à tous, sécurisée la nuit avec un volet roulant. Notre maison est située au milieu de vergers ce qui assure le calme de votre séjour et la beauté des prairies environnantes, à 2H30 de Paris, à 6km de la sortie de l'autoroute A11 Durtal. Nous ne proposons pas le WIFI, mais le lieu est couvert par la 4G. Des télévisions sont dans chaque chambre avec des lecteurs de DVD et un large choix de films, mais pas encore cablés aux chaines.
     </p>
   </div>
 </div>
