--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -1,7 +1,7 @@
 .navbarbox{
   width: 100vw;
   height: 50px;
-  position: absolute;
+  position: fixed;
   z-index: 200;
   background-color: rgba(94, 94, 95, 0.6);
 
