--- a/app/assets/stylesheets/pages/welcome.scss
+++ b/app/assets/stylesheets/pages/welcome.scss
@@ -4,6 +4,8 @@
   .background-welcome-img {
     position: relative;
     .zoom-background{
+      width: 100%;
+      height: 100%;
       position: absolute;
       background-size: cover;
       overflow: hidden;
@@ -30,21 +32,23 @@
       text-align: center;
       justify-content: center;
       h1 {
-        margin-top: 0;
         color: #FFFF;
         font-weight: lighter;
         font-size: 4em;
+        margin-bottom: 0px;
+        text-transform: capitalize;
       }
 
       h2 {
         color: #FFFF;
         font-weight: lighter;
-        font-size: 2.4em;
+        font-size: 1.4em;
+        text-transform: uppercase;
       }
 
       .btn-home {
-        padding: 15px;
-        border-radius: 15px;
+        padding: 25px;
+        border-radius: 25px;
         color: aliceblue;
         text-decoration: none;
         background-color: #7d8295;
