--- a/app/views/components/_backgroundheader.html.erb
+++ b/app/views/components/_backgroundheader.html.erb
@@ -1,9 +1,9 @@
 <div class="container-show">
   <div class="background-show">
-    <%= image_tag "site.jpeg", class:"background-show-img"%>
+    <%= image_tag "home_flowers.jpeg", class:"background-show-img"%>
   </div>
   <div class="background-show-txt">
-    <h1>MANOIR - HUART</h1>
+    <h1>L'entre-deux-pommes</h1>
     <h2>- Chambre d'hôte -</h2>
   </div>
 </div>
