--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -1,18 +1,18 @@
 <div class="container-footer">
   <span>
     <span>
-      <a href="mailto:chambre.hote@gmail.com" target="_self">chambres.hote@gmail.com</a>
+      <a href="mailto:chambre.hote@gmail.com" target="_self">lentredeuxpommes@gmail.com</a>
     </span>
     <span>
       /
     </span>
     <span>
-      <a href="tel:06" >+33 (0)678939873</a>
+      <a href="tel:06" >+33 (0)670834578</a>
     </span>
   </span>
   <p>
     <span>
-      177 boulevard Camille flammarion 13004 Marseille
+      608 route de la guiberdière, 49430 Bourgneuf, France
     </span>
   </p>
   <span>
