--- a/app/views/components/_legal_notices.html.erb
+++ b/app/views/components/_legal_notices.html.erb
@@ -5,9 +5,9 @@
     <h1>Informations légales</h1>
     <h2>1. Présentation du site</h2>
     <span>En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il est précisé aux utilisateurs du site  l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi :</span>
-    <span>Propriétaire :</span>
+    <span>Propriétaire : L'entre-deux-pommes</span>
     <span>Créateur :</span>
-    <span>Responsable publication : -</span>
+    <span>Responsable publication : </span>
     <span>Le responsable publication est une personne physique ou une personne morale.</span>
     <span>Webmaster : -</span>
     <span>Crédits : les mentions légales ont été générées et offertes par</span>
