changement du link flatpicker et rajout yarn

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,9 @@
 @import "pages/indexroom";
 @import "pages/showroom";
 @import "pages/indexactivitie";
-@import "https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css";
+/* app/assets/stylesheets/application.scss */
+@import "flatpickr/dist/flatpickr.min.css";
+
 
 /*
  *= require flatpickr
