--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -29,12 +29,13 @@
     <% end %>
 
     <div class="room-info">
-      <h2><%= link_to room.title, room_path(room) %></h2>
+      <h2><%= room.title %></h2>
       <p><strong>Taille :</strong> <%= room.size %></p>
       <p><strong>Capacité :</strong> <%= room.capacity %> personnes</p>
       <p><strong>Nombre de lits :</strong> <%= room.bed_count %></p>
       <p><strong>Prix :</strong> <%= number_to_currency(room.price, unit: "€") %> / nuit</p>
       <p><strong>Équipements :</strong> <%= room.features %></p>
+      <%= link_to "Faire une demande de réservation", new_reservation_path, class: "btn" %>
     </div>
   </div>
 <% end %>
