modification du css et du javascript

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,37 +1,8 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
-
-@import "components/footer";
-@import "components/navbar";
-@import "components/backgroundheader";
-@import "components/privacypolicy";
-@import "components/legalnotices";
-@import "components/carousel.scss";
-@import "pages/home";
-@import "pages/contact";
-@import "pages/welcome";
-@import "pages/indexroom";
-@import "pages/showroom";
-@import "pages/indexactivitie";
 /* app/assets/stylesheets/application.scss */
-@import "flatpickr/dist/flatpickr.min.css";
 
-/*
- *= require flatpickr
- */
+/* ===============================
+Base
+================================ */
 
 body {
   margin: 0;
@@ -45,9 +16,10 @@ h1 {
   color: #2c3e50;
   text-align: center;
 }
+
 h2 {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  line-height: 1.0;
+  line-height: 1;
   font-size: 1.5rem;
   margin-bottom: 20px;
   color: #2c3e50;
@@ -57,3 +29,31 @@ h2 {
 :root {
   --color_txt: 74, 74, 74;
 }
+
+/* ===============================
+Vendors
+================================ */
+
+@import "vendors/flatpickr.min";
+
+/* ===============================
+Components
+================================ */
+
+@import "components/navbar";
+@import "components/footer";
+@import "components/backgroundheader";
+@import "components/carousel";
+@import "components/legalnotices";
+@import "components/privacypolicy";
+
+/* ===============================
+Pages
+================================ */
+
+@import "pages/home";
+@import "pages/welcome";
+@import "pages/contact";
+@import "pages/indexroom";
+@import "pages/showroom";
+@import "pages/indexactivitie";
