--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -12,7 +12,7 @@
   </span>
   <p>
     <span>
-      608 route de la guiberdière, 49430 Bourgneuf, France
+      608 route de la guiberdière, Lézigné, France
     </span>
   </p>
   <span>
