--- a/app/views/components/privacy_policy.html.erb
+++ b/app/views/components/privacy_policy.html.erb
@@ -85,9 +85,9 @@
     <p>Nous pouvons réviser cette politique de confidentialité à chaque fois que nécessaire, à notre seule discrétion, et la version la plus récente sera toujours affichée sur notre site web (comme indiqué dans la rubrique « Dernière révision »). Nous vous encourageons à consulter régulièrement la présente Politique de confidentialité pour prendre connaissance de toute modification. En cas de changements importants, nous publierons sur notre site web un avis pour annoncer ces changements.  Si vous continuez à utiliser les Services après la notification de modifications sur notre site web, cela constituera votre reconnaissance de, et votre consentement à, ces modifications de la Politique de confidentialité et votre accord à être lié(e) par les conditions de ces modifications.</p>
     <h4>Nous contacter</h4>
     <p>Si vous avez des questions d'ordre général sur les Services ou les informations que nous recueillons à votre sujet, ou sur la manière dont nous les utilisons, contactez-nous :</p>
-    <p>Nom :</p>
-    <p>Adresse : 608 route de la guiberdière, 49430 Bourgneuf, France</p>
-    <p>E-mail :</p>
+    <p>Nom : L'entre deux pommes</p>
+    <p>Adresse : 608 route de la guiberdière, Lézigné France</p>
+    <p>E-mail : lentredeuxpommes@gmail.com</p>
   </div>
 </div>
 <%= render "components/footer" %>
