--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -9,7 +9,7 @@
     <div class="contact-info">
       <div class="contact-block">
         <h3>📍 Adresse</h3>
-        <p>608 route de la Guiberdière<br>49430 Bourgneuf, France</p>
+        <p>608 route de la Guiberdière<br>Lézigné, France</p>
       </div>
 
       <div class="contact-block">
