--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,11 +1,11 @@
-<div class="navbarbox">
+<div class="navbarbox" data-controller="burger">
   <nav class="navbar">
-    <ul class="navbarul">
-      <li><%= link_to 'Bienvenue', welcome_path, class: 'navbarli' %></li>
-      <li><%= link_to 'Accueil', home_path, class: 'navbarli' %></li>
-      <li><%= link_to "Les chambres d'hôte", rooms_path, class: 'navbarli' %></li>
-      <li><%= link_to 'Activités', activities_path, class: 'navbarli' %></li>
-      <li><%= link_to 'Nous contacter', contact_path, class: 'navbarli' %></li>
+    <button class="burger" data-action="click->burger#toggle">☰</button>
+    <ul class="navbarul" data-burger-target="menu">
+      <li><%= link_to 'Accueil', root_path, class: 'navbarlink' %></li>
+      <li><%= link_to 'Chambres', rooms_path, class: 'navbarlink' %></li>
+      <li><%= link_to 'Activités', activities_path, class: 'navbarlink' %></li>
+      <li><%= link_to 'Contact', contact_path, class: 'navbarlink navbarlink--cta' %></li>
     </ul>
   </nav>
 </div>
