--- a/app/views/components/legal_notices.html.erb
+++ b/app/views/components/legal_notices.html.erb
@@ -6,12 +6,8 @@
     <h2>1. Présentation du site</h2>
     <span>En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il est précisé aux utilisateurs du site  l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi :</span>
     <span>Propriétaire : L'entre-deux-pommes</span>
-    <span>Créateur :</span>
-    <span>Responsable publication : </span>
     <span>Le responsable publication est une personne physique ou une personne morale.</span>
-    <span>Webmaster : -</span>
-    <span>Crédits : les mentions légales ont été générées et offertes par</span>
-    <span>Hébergeur :</span>
+    <span>Hébergeur : Scalingo</span>
     <h3>2. Conditions générales d’utilisation du site et des services proposés</h3>
     <span>L’utilisation du site  implique l’acceptation pleine et entière des conditions générales d’utilisation ci-après décrites. Ces conditions d’utilisation sont susceptibles d’être modifiées ou complétées à tout moment, les utilisateurs du site  sont donc invités à les consulter de manière régulière.</span>
     <span>Ce site est normalement accessible à tout moment aux utilisateurs. Une interruption pour raison de maintenance technique peut être toutefois décidée par , qui s’efforcera alors de communiquer préalablement aux utilisateurs les dates et heures de l’intervention.</span>
