modification du scss répartion du javascript

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,11 @@ h2 {
   --color_txt: 74, 74, 74;
 }
 
+body.menu-open {
+  overflow: hidden;
+}
+
+
 /* ===============================
 Vendors
 ================================ */
