--- a/app/views/components/_welcomecontainer.html.erb
+++ b/app/views/components/_welcomecontainer.html.erb
@@ -14,7 +14,7 @@
       <%= link_to "Découvrir le site",
         home_path,
         class: "btn-home",
-        data: { turbo: false } %>
+        data: { turbo: true } %>
     </div>
   </div>
 </div>
