modification du html et scss

--- a/app/views/components/_backgroundheader.html.erb
+++ b/app/views/components/_backgroundheader.html.erb
@@ -1,6 +1,7 @@
 <div class="container-show">
   <div class="background-show">
     <%= image_tag "house/accueil2.jpg", class:"background-show-img"%>
+    <div class="background-overlay"></div>
   </div>
   <div class="background-show-txt">
     <h1>L'entre-deux-pommes</h1>
