--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Demande de réservation</h1>
+<%= render "components/backgroundheader" %>
 
 <%= form_with url: create_reservation_path, method: :post, local: true do |f| %>
   <div>
